Add machine translation

--- a/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
@@ -100,9 +100,9 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/cli-tooling.adoc:50
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Use a recent JBang version"
-msgstr ""
+msgstr "最新のJBangバージョンを使用する"
 
 #. type: delimited block =
 #: upstream/_guides/cli-tooling.adoc:54
@@ -597,9 +597,9 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:341
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Shell autocomplete and aliases"
-msgstr ""
+msgstr "シェルのオートコンプリートとエイリアス"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:344
@@ -608,8 +608,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:349
+#, fuzzy
 msgid "# Setup autocompletion in the current shell source <(quarkus completion)"
-msgstr ""
+msgstr "# Setup autocompletion in the current shell source <(quarkus completion)"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:352
@@ -619,5 +620,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:359
+#, fuzzy
 msgid "# Add an alias for the quarkus command alias q=quarkus # Add q to list of commands included in quarkus autocompletion complete -F _complete_quarkus q"
-msgstr ""
+msgstr "# Add an alias for the quarkus command alias q=quarkus # Add q to list of commands included in quarkus autocompletion complete -F _complete_quarkus q"
