--- a/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
@@ -807,9 +807,9 @@ msgstr ""
 
 #. type: Title =====
 #: upstream/_guides/deploying-to-openshift.adoc:384
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Persistent Volume Claims"
-msgstr ""
+msgstr "パーシスタント・ボリューム・クレーム"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-openshift.adoc:389
