--- a/l10n/po/ja_JP/_guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-ui.adoc.po
@@ -21,9 +21,9 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/dev-ui.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dev UI"
-msgstr ""
+msgstr "Dev UI"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:11
