--- a/l10n/po/ja_JP/_guides/jgit.adoc.po
+++ b/l10n/po/ja_JP/_guides/jgit.adoc.po
@@ -21,9 +21,9 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/jgit.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JGit"
-msgstr ""
+msgstr "JGit"
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:13
