--- a/l10n/po/ja_JP/_guides/lra.adoc.po
+++ b/l10n/po/ja_JP/_guides/lra.adoc.po
@@ -21,41 +21,45 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/lra.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Narayana LRA Participant Support"
-msgstr ""
+msgstr "ナラヤナLRA参加者サポート"
 
 #. type: Title ==
 #: upstream/_guides/lra.adoc:10
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Introduction"
-msgstr ""
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:14
+#, fuzzy
 msgid "The LRA (short for Long Running Action) participant extension is useful in microservice based designs where different services can benefit from a relaxed notion of distributed consistency."
-msgstr ""
+msgstr "LRA（Long Running Actionの略）パーティシパントエクステンションは、マイクロサービスベースのデザインで、異なるサービスが分散一貫性の緩和された概念を利用できる場合に便利です。"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:19
+#, fuzzy
 msgid "The idea is for multiple services to perform different computations/actions in concert, whilst retaining the option to compensate for any actions performed during the computation.  This kind of loose coupling of services bridges the gap between strong consistency models such as JTA/XA and \"home grown\" ad hoc consistency solutions."
-msgstr ""
+msgstr "このアイデアは、複数のサービスが協調して異なる計算/アクションを実行する一方で、計算中に実行されたアクションを補正するオプションを保持するというものです。このようなサービスの緩やかな結合は、JTA/XAのような強力な一貫性モデルと、「家庭で開発された」アドホックな一貫性ソリューションとの間のギャップを埋めるものです。"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:42
+#, fuzzy
 msgid "The model is based on the https://github.com/eclipse/microprofile-lra/blob/master/spec/src/main/asciidoc/microprofile-lra-spec.adoc#eclipse-microprofile-lra[Eclipse MicroProfile LRA specification].  The approach is for the developer to annotate a business method with a Java annotation (https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[`@LRA`]).  When such a method is called, an LRA context is created (if one is not already present) which is passed along with subsequent JAX-RS invocations until a method is reached which also contains an `@LRA` annotation with an attribute that indicates that the LRA should be closed or cancelled. The default is for the LRA to be closed in the same method that started the LRA (which itself may have propagated the context during method execution).  The JAX-RS resource indicates that it wishes to participate in the interaction by, minimally, marking one of the methods with an https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[`@Compensate`] annotation. If the context is later cancelled then this compensate action is guaranteed to be called even in the presence of failures and is the trigger for the resource to compensate for any activities it performed in the context of the LRA. This guarantee enables services to operate reliably with the assurance of eventual consistency (when all compensation activities have ran to completion). The participant can ask to be reliably notified when the LRA it is participating in is closed by marking one of the methods with an https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[`@Complete`] annotation. In this way cancelling an LRA causes all participants to be notified via their Compensate callback and closing an LRA causes all participants to be notified via their Complete callback (if they have one).  Other annotations for controlling participants are documented in the https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[MicroProfile LRA API v1.0 javadoc]."
-msgstr ""
+msgstr "このモデルは、 link:https://github.com/eclipse/microprofile-lra/blob/master/spec/src/main/asciidoc/microprofile-lra-spec.adoc#eclipse-microprofile-lra[Eclipse MicroProfile LRA仕様]に基づいています。このアプローチでは、開発者はビジネス・メソッドにJavaアノテーション( link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[`@LRA`]).このようなメソッドが呼び出されると、LRAコンテキストが作成され（まだ存在していない場合）、後続のJAX-RSの呼び出しとともに、LRAの閉鎖またはキャンセルを示す属性を持つ `@LRA` アノテーションを含むメソッドに到達するまで渡されます。デフォルトでは、LRAを開始したのと同じメソッドでLRAを閉じることになっています（それ自体がメソッド実行中にコンテキストを伝播している可能性があります）。JAX-RSリソースは、メソッドの1つをアノテーションでマークすることで、相互作用への参加を希望することを示します。  link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[`@Compensate`]アノテーションでメソッドの1つをマークすることで、相互作用に参加したいことを示します。コンテキストが後にキャンセルされた場合、この補償アクションは、障害が発生しても呼び出されることが保証されており、リソースがLRAのコンテキストで実行したアクティビティを補償するトリガーとなります。この保証により、最終的な一貫性（すべての補償活動が完了したとき）が保証された状態で、サービスを確実に動作させることができます。参加者は、参加しているLRAが閉じられたときに確実に通知されるようにするために、メソッドの1つに  link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[`@Complete`]アノテーションを付けることで、参加者は自分が参加しているLRAが終了したときに確実に通知を受けることができます。このように、LRAをキャンセルすると、すべての参加者にCompensateコールバックを介して通知され、LRAをクローズすると、すべての参加者にCompleteコールバック（ある場合）を介して通知されます。参加者を制御するためのその他のアノテーションについては、 link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/[MicroProfile LRA API v1.0 javadoc]に記載されています。"
 
 #. type: Title ==
 #: upstream/_guides/lra.adoc:43
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuration"
-msgstr ""
+msgstr "構成"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:47
+#, fuzzy
 msgid "Once you have your Quarkus Maven project configured you can add the `narayana-lra` extension by running the following command in your project base directory:"
-msgstr ""
+msgstr "Quarkus Mavenプロジェクトの設定が完了したら、プロジェクトのベースディレクトリで以下のコマンドを実行して、 `narayana-lra` エクステンションを追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/lra.adoc:51
@@ -65,8 +69,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:54
+#, fuzzy
 msgid "This will add the following to your pom.xml:"
-msgstr ""
+msgstr "これにより、pom.xmlに以下が追加されます。"
 
 #. type: delimited block -
 #: upstream/_guides/lra.adoc:61
@@ -80,13 +85,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:65
+#, fuzzy
 msgid "If there is a running coordinator then this is all you need in order to create new LRAs and to enlist participants with them."
-msgstr ""
+msgstr "コーディネーターがいる場合は、これだけで新しいLRAを作り、参加者を募ることができます。"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:70
+#, fuzzy
 msgid "The LRA extension can be configured by updating an `application.properties` file in the `src/main/resources` directory. The only LRA specific property is `quarkus.lra.coordinator-url=<url>` which specifies the HTTP endpoint of an external coordinator, for example:"
-msgstr ""
+msgstr "LRAの拡張機能は、 `src/main/resources` ディレクトリ内の `application.properties` ファイルを更新することで設定できます。LRA固有のプロパティは、 `quarkus.lra.coordinator-url=&amp;lt;url&amp;gt;` 、外部コーディネーターのHTTPエンドポイントを指定するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/lra.adoc:74
@@ -96,35 +103,39 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:82
+#, fuzzy
 msgid "For a Narayana coordinator the path component of the url is normally `lra-coordinator`.  Coordinators can be obtained from `https://hub.docker.com/r/jbosstm/lra-coordinator` or you can build your own coordinator using a maven pom that includes the appropriate dependencies. A Quarkus quickstart will be provided to show how to do this or you can take a look at one of the https://github.com/jbosstm/quickstart/tree/master/rts/lra-examples/lra-coordinator[Narayana quickstarts].  Another option would be to run it managed inside a WildFly application server."
-msgstr ""
+msgstr "ナラヤナのコーディネーターの場合、URLのパス成分は通常 `lra-coordinator` 。コーディネーターは以下から入手できます。 `&lt;a href=\"https://hub.docker.com/r/jbosstm/lra-coordinator\" class=\"bare\"&gt;https://hub.docker.com/r/jbosstm/lra-coordinator&lt;/a&gt;`また、適切な依存関係を含むmaven pomを使用して独自のコーディネーターを構築することもできます。この方法については、Quarkusのクイックスタートが提供されますが、 link:https://github.com/jbosstm/quickstart/tree/master/rts/lra-examples/lra-coordinator[Narayanaのクイックスタート]の1つを参照することもできます。もう一つの方法は、WildFlyアプリケーションサーバ内で管理された状態で実行することです。"
 
 #. type: Title ==
 #: upstream/_guides/lra.adoc:83
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Handling failures"
-msgstr ""
+msgstr "失敗の処理"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:92
+#, fuzzy
 msgid "When an LRA is told to finish, i.e. when a method annotated with `@LRA(end = true, ...)` is invoked, the coordinator will instruct all services involved in the interaction to finish. If a service is unavailable (or still finishing) then the coordinator will retry periodically. It is the users responsibility to restart failed services on the same endpoint that they used when they first joined the LRA, or to tell the coordinator that they wish to be notified on new endpoints. An LRA is not deemed finished until *all* participants have acknowledged that they have finished."
-msgstr ""
+msgstr "LRAが終了するように指示された場合、つまり、 `@LRA(end = true, …​)` でアノテーションされたメソッドが呼び出された場合、コーディネーターは対話に関わるすべてのサービスに終了するように指示します。サービスが利用できない場合（または終了中の場合）、コーディネーターは定期的に再試行します。失敗したサービスを、LRAに最初に参加したときに使用したのと同じエンドポイントで再起動するか、新しいエンドポイントでの通知を希望することをコーディネーターに伝えるのは、ユーザーの責任です。LRAは、 *すべての*参加者が終了したことを確認するまで、終了したとはみなされません。"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:100
+#, fuzzy
 msgid "The coordinator is responsible for reliably creating and ending LRAs and for managing participant enlistment and it therefore must be available (for example if it or the network fail then something in the environment is responsible for restarting the coordinator or for repairing the network, respectively). To fulfill this task the coordinator must have access to durable storage for its logs (via a filesystem or in a database).  At the time of writing, managing coordinators is the responsibility of the user. An \"out-of-the-box\" solution will be forthcoming."
-msgstr ""
+msgstr "コーディネーターは、LRAを確実に作成・終了し、参加者の参加を管理する役割を担っているため、利用可能でなければなりません（例えば、コーディネーターやネットワークに障害が発生した場合、環境の何かがコーディネーターの再起動やネットワークの修復を行うことになります）。このタスクを遂行するために、コーディネーターはログを保存するための耐久性のあるストレージにアクセスできなければなりません（ファイルシステムまたはデータベースを介して）。本稿執筆時点では、コーディネーターの管理はユーザーの責任である。すぐに使える」ソリューションが登場する予定です。"
 
 #. type: Title ==
 #: upstream/_guides/lra.adoc:101
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Examples"
-msgstr ""
+msgstr "例"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:106
+#, fuzzy
 msgid "The following is a simple example of how to start an LRA and how to receive a notification when the LRA is later cancelled (the `@Compensate` annotated method is called) or closed (`@Complete` is called):"
-msgstr ""
+msgstr "以下は、LRAを開始する方法と、後にLRAがキャンセルされたり（ `@Compensate` の注釈付きメソッドが呼び出される）、クローズされたり（ `@Complete` が呼び出される）したときに通知を受け取る方法の簡単な例です。"
 
 #. type: delimited block -
 #: upstream/_guides/lra.adoc:126
@@ -195,13 +206,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:164
+#, fuzzy
 msgid "The example also shows that when an LRA is present its identifier can be obtained by reading the request headers via the `@HeaderParam` JAX-RS annotation type."
-msgstr ""
+msgstr "また、この例では、LRAが存在する場合、 `@HeaderParam` JAX-RSアノテーションタイプを介してリクエストヘッダを読み取ることで、その識別子を取得できることを示しています。"
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:170
+#, fuzzy
 msgid "And here's an example of how to start an LRA in one resource method and close it in a different resource method using the `end` element of the `LRA` annotation. It also shows how to configure the LRA to be automatically cancelled if the business method returns the particular HTTP status codes identified in the `cancelOn` and `cancelOnFamily` elements:"
-msgstr ""
+msgstr "ここでは、 `LRA` アノテーションの `end` 要素を使用して、あるリソース・メソッドで LRA を開始し、別のリソース・メソッドで閉じる方法の例を示しています。また、ビジネスメソッドが `cancelOn` および `cancelOnFamily` 要素で特定される特定の HTTP ステータスコードを返した場合に、LRA が自動的にキャンセルされるように設定する方法も示しています。"
 
 #. type: delimited block -
 #: upstream/_guides/lra.adoc:184
@@ -233,5 +246,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/lra.adoc:197
+#, fuzzy
 msgid "The `end = false` element on the bookTrip method forces the LRA to continue running when the method finishes and the `end = true` element on the confirmTrip method forces the LRA (started by the bookTrip method) to be closed when the method finishes. Note that this end element can be placed on any JAX-RS resource (ie one service can start the LRA whilst a different service ends it). There are many more examples in the https://github.com/eclipse/microprofile-lra/blob/master/spec/src/main/asciidoc/microprofile-lra-spec.adoc#java-annotations[Microprofile LRA specification document] and in the https://github.com/eclipse/microprofile-lra/tree/master/tck/src/main/java/org/eclipse/microprofile/lra/tck[Microprofile LRA TCK]."
-msgstr ""
+msgstr "bookTripメソッドの `end = false` 要素は、メソッドが終了したときにLRAの実行を継続させ、confirmTripメソッドの `end = true` 要素は、メソッドが終了したときに（bookTripメソッドによって開始された）LRAを強制的に終了させます。このend要素は、どのJAX-RSリソースにも配置できることに注意してください（つまり、あるサービスがLRAを開始し、別のサービスがそれを終了させることができます）。 link:https://github.com/eclipse/microprofile-lra/blob/master/spec/src/main/asciidoc/microprofile-lra-spec.adoc#java-annotations[Microprofile LRA仕様書]および link:https://github.com/eclipse/microprofile-lra/tree/master/tck/src/main/java/org/eclipse/microprofile/lra/tck[Microprofile LRA TCK]には、さらに多くの例があります。"
