--- a/l10n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentracing.adoc.po
@@ -560,9 +560,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/opentracing.adoc:285
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Zipkin compatibility mode"
-msgstr ""
+msgstr "Zipkin互換モード"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:288
@@ -583,8 +583,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:299
+#, fuzzy
 msgid "It contains the dependencies to convert the request to zipkin format.  The zipkin compatibility mode will be activated after defining the config property as follows:"
-msgstr ""
+msgstr "リクエストを zipkin 形式に変換するための依存関係が含まれています。以下のようにconfigプロパティを定義すると、zipkin互換モードが有効になります。"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:304
