--- a/l10n/po/ja_JP/_guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_guides/optaplanner.adoc.po
@@ -1367,8 +1367,9 @@ msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/optaplanner.adoc:728
+#, fuzzy
 msgid "A good application includes test coverage."
-msgstr ""
+msgstr "良いアプリケーションには、テストカバレッジが含まれています。"
 
 #. type: Title ====
 #: upstream/_guides/optaplanner.adoc:729
