--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -55,8 +55,9 @@ msgstr "image:http-architecture.png[alt=Quarkus HTTP Architecture]"
 
 #. type: Plain text
 #: upstream/_guides/reactive-routes.adoc:28
+#, fuzzy
 msgid "See the xref:quarkus-reactive-architecture.adoc[Quarkus Reactive Architecture documentation] for further details on this topic."
-msgstr ""
+msgstr "このトピックの詳細については、 link:quarkus-reactive-architecture.html[Quarkus Reactive Architectureのドキュメント]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-routes.adoc:30
