--- a/l10n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
@@ -228,9 +228,9 @@ msgstr "プロアクティブ認証を使用している場合、 `SecurityIdent
 
 #. type: Title ===
 #: upstream/_guides/security-built-in-authentication.adoc:125
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "How to customize authentication exception responses"
-msgstr ""
+msgstr "認証の例外応答をカスタマイズする方法"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:129
