--- a/l10n/po/ja_JP/_guides/smallrye-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-health.adoc.po
@@ -598,18 +598,21 @@ msgstr "ネガティブヘルスチェックの手順"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:330
+#, fuzzy
 msgid "MicroProfile Health currently doesn't support returning reactive types, but SmallRye Health does."
-msgstr ""
+msgstr "MicroProfile Healthは現在、リアクティブタイプのリターンをサポートしていませんが、SmallRye Healthはサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:333
+#, fuzzy
 msgid "If you want to provide a reactive health check, you can implement the `io.smallrye.health.api.AsyncHealthCheck` interface instead of the `org.eclipse.microprofile.health.HealthCheck` one.  The `io.smallrye.health.api.AsyncHealthCheck` interface allows you to return a `Uni<HealthCheckResponse>`."
-msgstr ""
+msgstr "リアクティブなヘルスチェックを行いたい場合は、 `org.eclipse.microprofile.health.HealthCheck` の代わりに `io.smallrye.health.api.AsyncHealthCheck` のインターフェイスを実装することができます。 `io.smallrye.health.api.AsyncHealthCheck` インターフェイスでは、 `Uni&amp;lt;HealthCheckResponse&amp;gt;` を返すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-health.adoc:335
+#, fuzzy
 msgid "The following example shows a reactive liveness check:"
-msgstr ""
+msgstr "以下の例では、リアクティブなライヴネスチェックを行っています。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-health.adoc:339
