--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -1894,14 +1894,15 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/writing-extensions.adoc:970
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Visualizing build step dependencies"
-msgstr ""
+msgstr "ビルドステップの依存関係の可視化"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:974
+#, fuzzy
 msgid "It can occasionally be useful to see a visual representation of the interactions between the various build steps. For such cases, adding `-Djboss.builder.graph-output=build.dot` when building an application will result in the creation of the `build.dot` file in the project's root directory. See link:https://graphviz.org/resources/[this] for a list of software that can open the file and show the actual visual representation."
-msgstr ""
+msgstr "様々なビルドステップ間の相互作用を視覚的に表現することは、時として有用です。そのような場合、アプリケーションのビルド時に `-Djboss.builder.graph-output=build.dot` を追加すると、プロジェクトのルートディレクトリに `build.dot` ファイルが作成されます。このファイルを開いて実際の視覚表現を表示することができるソフトウェアの一覧は link:https://graphviz.org/resources/[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_guides/writing-extensions.adoc:976
