--- a/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
@@ -82,8 +82,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-getting-started.adoc:39
+#, fuzzy
 msgid "By default the `quarkus-grpc` extension relies on reactive programming model, in this guide we will follow reactive approach.  Under the dependencies section of your `pom.xml` file replace the `quarkus-resteasy` dependency with:"
-msgstr ""
+msgstr "デフォルトでは、 `quarkus-grpc` 拡張機能はリアクティブプログラミングモデルに依存していますが、本ガイドではリアクティブアプローチを採用します。 `pom.xml` ファイルの dependencies セクションで、 `quarkus-resteasy` の依存関係を次のように置き換えます。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-getting-started.adoc:46
