--- a/l10n/po/ja_JP/_guides/reactive-messaging-websocket.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging-websocket.adoc.po
@@ -21,72 +21,81 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/reactive-messaging-websocket.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using WebSockets with Reactive Messaging"
-msgstr ""
+msgstr "WebSocketとReactive Messagingの併用"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:13
+#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can utilize SmallRye Reactive Messaging to consume and produce messages via WebSockets.  WebSockets support is a part of the Reactive Messaging HTTP extension (`quarkus-reactive-messaging-http`)."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがSmallRye Reactive Messagingを利用して、WebSocketを介してメッセージを消費および生成する方法を説明します。WebSocketsのサポートは、Reactive Messaging HTTP extension ( `quarkus-reactive-messaging-http`)の一部です。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:15
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:18
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるためには"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:20
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:21
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "a IDE"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:22
+#, fuzzy
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 11+をインストールし、 `JAVA_HOME` を適切に設定する。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:23
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:24
+#, fuzzy
 msgid "GraalVM, Docker or Podman installed if you want to run in native mode."
-msgstr ""
+msgstr "ネイティブモードで動作させたい場合は、GraalVM、Docker、Podmanのいずれかをインストールします。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:25
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "建築"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:29
+#, fuzzy
 msgid "In this guide we will implement a service, namely `CostConverter` that consumes messages with costs in multiple currencies and converts each cost to its value in Euro."
-msgstr ""
+msgstr "このガイドでは、複数の通貨でのコストを含むメッセージを消費し、各コストをユーロでの価値に変換するサービス、すなわち `CostConverter` を実装します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:32
+#, fuzzy
 msgid "To let a user easily try out the service, we will implement an HTTP resource summing up the costs (`CostCollector`), and a simple web page to add new costs and watch the sum."
-msgstr ""
+msgstr "ユーザーが簡単にサービスを試せるように、コストを集計するHTTPリソース( `CostCollector`)と、新しいコストを追加して集計結果を確認できるシンプルなWebページを実装します。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_guides/reactive-messaging-websocket.adoc:33
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Architecture,"
-msgstr ""
+msgstr "建築です。"
 
 #. type: Target for macro image
 #: upstream/_guides/reactive-messaging-websocket.adoc:33
@@ -96,35 +105,39 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:36
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:40
+#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:42
+#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:44
+#, fuzzy
 msgid "The solution is located in the `reactive-messaging-websockets-quickstart` {quickstarts-tree-url}/reactive-messaging-websockets-quickstart[directory]."
-msgstr ""
+msgstr "このソリューションは `reactive-messaging-websockets-quickstart` {quickstarts-tree-url}/reactive-messaging-websockets-quickstart[directory]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:45
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:48
+#, fuzzy
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトを用意します。以下のコマンドで新しいプロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:57
@@ -140,19 +153,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:60
+#, fuzzy
 msgid "This command generates a Maven project with Reactive Messaging HTTP connector and RESTEasy Reactive with Jackson support extensions."
-msgstr ""
+msgstr "このコマンドは、Reactive Messaging HTTPコネクタとRESTEasy Reactive with Jacksonサポートエクステンションを含むMavenプロジェクトを生成します。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:62
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The Converter"
-msgstr ""
+msgstr "コンバーター"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:65
+#, fuzzy
 msgid "Create the `src/main/java/org/acme/reactivews/CostConverter.java` file, with the following content:"
-msgstr ""
+msgstr "`src/main/java/org/acme/reactivews/CostConverter.java` 、以下の内容のファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:69
@@ -226,28 +241,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:106
+#, fuzzy
 msgid "Consume messages from the `incoming-costs` stream."
-msgstr ""
+msgstr "`incoming-costs` ストリームからメッセージを消費します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:107
+#, fuzzy
 msgid "Dispatch returned values to the `outgoing-costs` stream."
-msgstr ""
+msgstr "返された値を `outgoing-costs` ストリームにディスパッチします。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:111
+#, fuzzy
 msgid "Consume an event with payload of type `Cost` and produce another `Cost`, with value converted to Euro if we know the conversion ratio.  In the case of consuming an arbitrary object, the reactive-messaging-http extension will attempt to deserialize the request body as a JSON object."
-msgstr ""
+msgstr "`Cost` 型のペイロードを持つイベントを消費し、変換比率がわかっている場合は値をユーロに変換した別の `Cost` を生成します。任意のオブジェクトを消費する場合、reactive-messaging-http拡張は、リクエスト・ボディをJSONオブジェクトとしてデシリアライズしようとします。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:115
+#, fuzzy
 msgid "Unlike the outbound HTTP connector, the outbound WebSocket connector does not check if the message is consumed by the remote endpoint. It may happen that a failure to receive a message is not reported, e.g. if the remote side closes the WebSocket connection in a crucial moment."
-msgstr ""
+msgstr "アウトバウンド HTTP コネクタとは異なり、アウトバウンド WebSocket コネクタは、メッセージがリモート エンドポイントで消費されたかどうかをチェックしません。例えば、リモート側が重要な瞬間に WebSocket 接続を閉じた場合などに、メッセージの受信失敗が報告されないことがあります。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:117
+#, fuzzy
 msgid "Let's define the `Cost` class:"
-msgstr ""
+msgstr "`Cost` クラスを定義してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:124
@@ -315,39 +335,45 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:154
+#, fuzzy
 msgid "In the next step, we will create configurations for both streams in the `application.properties` file."
-msgstr ""
+msgstr "次のステップでは、 `application.properties` ファイルに両方のストリームの設定を作成します。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:155
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuring the Web Socket connector"
-msgstr ""
+msgstr "Web Socketコネクタの設定"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:159
+#, fuzzy
 msgid "We need to configure the Web Socket connector. This is done in the `application.properties` file.  The keys are structured as follows:"
-msgstr ""
+msgstr "Web Socketコネクタを設定する必要があります。これは `application.properties` ファイルで行います。キーは以下のように構成されています。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:161
+#, fuzzy
 msgid "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
-msgstr ""
+msgstr "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:163
+#, fuzzy
 msgid "The `channel-name` segment must match the value set in the `@Incoming` and `@Outgoing` annotation:"
-msgstr ""
+msgstr "`channel-name` のセグメントは、 `@Incoming` と `@Outgoing` のアノテーションで設定された値と一致する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:165
+#, fuzzy
 msgid "`incoming-costs` -> an inbound WebSocket that receives costs"
-msgstr ""
+msgstr "`incoming-costs` → コストを受信するインバウンドWebSocket"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:166
+#, fuzzy
 msgid "`outgoing-costs` -> an outbound WebSocket that pushes converted costs"
-msgstr ""
+msgstr "`outgoing-costs` → 変換されたコストをプッシュするアウトバウンドWebSocket"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:170
@@ -392,14 +418,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:188
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The CostCollector"
-msgstr ""
+msgstr "コストコレクター"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:190
+#, fuzzy
 msgid "To illustrate that converting messages and passing them through works, let's add a `CostCollector` class that consumes the Web Socket messages and exposes information about the sum of collected costs via REST:"
-msgstr ""
+msgstr "メッセージを変換して渡すことが機能することを説明するために、Web Socket メッセージを消費し、収集したコストの合計に関する情報を REST 経由で公開する `CostCollector` クラスを追加してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:196
@@ -453,29 +480,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:224
+#, fuzzy
 msgid "One more thing we have to do is to configure the `collector` channel in `application.properties`:"
-msgstr ""
+msgstr "もうひとつ、 `application.properties` で `collector` のチャンネルを設定する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:231
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The HTML page"
-msgstr ""
+msgstr "HTMLページ"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:234
+#, fuzzy
 msgid "To conveniently interact with the application, let's create a simple web page."
-msgstr ""
+msgstr "アプリケーションを便利に使うために、簡単なWebページを作ってみましょう。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:237
+#, fuzzy
 msgid "The page will provide a form to add costs, and an info of the current sum of costs.  The page periodically updates the sum by requesting the current sum from `/cost-collector`."
-msgstr ""
+msgstr "このページは、コストを追加するためのフォームと、現在のコストの合計を示す情報を提供します。このページは、 `/cost-collector` から現在の合計額を要求することで、定期的に合計額を更新します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:239
+#, fuzzy
 msgid "Change the `src/main/resources/META-INF/resources/index.html` file, with the following content:"
-msgstr ""
+msgstr "`src/main/resources/META-INF/resources/index.html` のファイルを、以下の内容で変更します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:247
@@ -573,14 +604,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:303
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Get it running"
-msgstr ""
+msgstr "稼動させる"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:306
+#, fuzzy
 msgid "Run the application using:"
-msgstr ""
+msgstr "を使ってアプリケーションを実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:310
@@ -590,19 +622,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:313
+#, fuzzy
 msgid "Open `http://localhost:8080/index.html` in your browser."
-msgstr ""
+msgstr "開く `&lt;a href=\"http://localhost:8080/index.html\" class=\"bare\"&gt;http://localhost:8080/index.html&lt;/a&gt;`をブラウザで開いてください。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:315
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Running Native"
-msgstr ""
+msgstr "ランニング・ネイティブ"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:318
+#, fuzzy
 msgid "You can build the native executable with:"
-msgstr ""
+msgstr "でネイティブの実行ファイルをビルドすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:322
@@ -612,20 +646,21 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-websocket.adoc:324
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Going further"
-msgstr ""
+msgstr "さらに進む"
 
 #. type: Title ===
 #: upstream/_guides/reactive-messaging-websocket.adoc:326
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "WebSockets"
-msgstr ""
+msgstr "WebSocket"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:328
+#, fuzzy
 msgid "All `quarkus-websocket` connector options:"
-msgstr ""
+msgstr "すべての `quarkus-websocket` のコネクターオプション。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-websocket.adoc:332
@@ -701,16 +736,18 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/reactive-messaging-websocket.adoc:362
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Reactive Messaging"
-msgstr ""
+msgstr "リアクティブメッセージング"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:364
+#, fuzzy
 msgid "This extension utilizes SmallRye Reactive Messaging to build data streaming applications."
-msgstr ""
+msgstr "この拡張機能は、SmallRye Reactive Messagingを利用して、データストリーミングアプリケーションを構築します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-websocket.adoc:365
+#, fuzzy
 msgid "If you want to go further check the documentation of https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging], the implementation used in Quarkus."
-msgstr ""
+msgstr "さらに詳しく知りたい場合は、Quarkusで使用されている link:https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging]のドキュメントを確認してください。"
