--- a/l10n/po/ja_JP/_posts/2021-08-20-quarkus-newsletter-11.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-08-20-quarkus-newsletter-11.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-quarkus-newsletter-11.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-quarkus-newsletter-11.adoc:9
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #11'\n"
@@ -35,23 +35,35 @@ msgid ""
 "bibquery: [\"pub.urldate > '2021-07-169'\", \"pub.urldate <= '2021-08-20'\"]\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus Newsletter #11'\n"
+"date: 2021-08-20\n"
+"tags: newsletter\n"
+"synopsis: Quarkusとその周辺の最新のオンラインストーリー、記事、ビデオを提供します。\n"
+"author: jcobb\n"
+"bibquery: [\"pub.urldate > '2021-07-169'\", \"pub.urldate <= '2021-08-20'\"]\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-quarkus-newsletter-11.adoc:13
+#, fuzzy
 msgid "The August Newsletter has been published! This month, check out great articles like \"3 reasons Quarkus 2.0 improves developer productivity on Linux\" and \"Bind a cloud event to Knative\"."
-msgstr ""
+msgstr "8月のニュースレターが発行されました!今月は、「Quarkus 2.0がLinuxでの開発者の生産性を向上させる3つの理由」や「Bind a cloud event to Knative」などの素晴らしい記事をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-quarkus-newsletter-11.adoc:15
+#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/11/[Newsletter #11]!"
-msgstr ""
+msgstr "link:https://quarkus.io/newsletter/11/[ニュースレター第11号]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-quarkus-newsletter-11.adoc:17
+#, fuzzy
 msgid "Want to get newsletters in your inbox? https://quarkus.io/newsletter[Sign up for the newsletter] using the on page form."
-msgstr ""
+msgstr "ニュースレターを受信してみませんか？ページ上のフォームを使って link:https://quarkus.io/newsletter[ニュースレターに登録し]てください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-20-quarkus-newsletter-11.adoc:18
+#, fuzzy
 msgid "We've also included the list of the newest found online stories. Give it a read and if you feel something is missing or have an article coming out for future Quarkus Newsletter install the https://github.com/quarkusio/url2quarkuspub[bookmarklet] on your laptop and phone to easily submit a story. If you prefer the manual way please https://github.com/quarkusio/quarkusio.github.io/issues[open an issue] with a short description and a url."
-msgstr ""
+msgstr "また、最新のオンラインストーリーのリストも掲載されています。読んでみて、何か足りないと感じたり、今後のQuarkus Newsletterに掲載予定の記事がある場合は、ノートパソコンや携帯電話に link:https://github.com/quarkusio/url2quarkuspub[ブックマークレット]をインストールすると、簡単に記事を投稿することができます。手動での投稿をご希望の場合は、簡単な説明とURLを入力して link:https://github.com/quarkusio/quarkusio.github.io/issues[イシューを開い]てください。"
