Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mailer.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-20 02:24+0000\n"
+"POT-Creation-Date: 2021-09-07 02:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -412,7 +412,7 @@ msgstr ""
 #: upstream/_versions/main/guides/mailer.adoc:188
 #, fuzzy
 #| msgid "The Quarkus mailer is using SMTP. In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables."
-msgid "In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables.  See the xref:configuration-reference.adoc[configuration reference guide] for details."
+msgid "In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables.  See the xref:config-reference.adoc[configuration reference guide] for details."
 msgstr "QuarkusのメーラーはSMTPを使用しています。 `src/main/resources/application.properties` ファイルでは、ホスト、ポート、ユーザー名、パスワードだけでなく、他の設定面も設定する必要があります。パスワードは、システムのプロパティーや環境変数を使って設定することもできることを覚えておいてください。"
 
 #. type: Plain text
