--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-31 13:16+0000\n"
+"POT-Creation-Date: 2021-09-07 17:15+0000\n"
 "PO-Revision-Date: 2021-07-20 16:26+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -451,7 +451,7 @@ msgstr "そろそろメールの送信をシミュレートしないようにメ
 #: upstream/_guides/mailer.adoc:188
 #, fuzzy
 #| msgid "The Quarkus mailer is using SMTP. In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables."
-msgid "In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables.  See the xref:configuration-reference.adoc[configuration reference guide] for details."
+msgid "In the `src/main/resources/application.properties` file, you need to configure the host, port, username, password as well as the other configuration aspect.  Note that the password can also be configured using system properties and environment variables.  See the xref:config-reference.adoc[configuration reference guide] for details."
 msgstr "Quarkus mailerはSMTPを使用しています。 `src/main/resources/application.properties` ファイルでは、ホスト、ポート、ユーザー名、パスワードだけでなく、他の設定面も設定する必要があります。パスワードは、システムのプロパティーや環境変数を使って設定することもできるのを覚えておいてください。"
 
 #. type: Plain text
