Add machine translation

--- a/l10n/po/ja_JP/_guides/mailer-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer-reference.adoc.po
@@ -554,8 +554,9 @@ msgstr "GmailのSMTPサーバーを使用する場合は、まず、 `Google Acc
 
 #. type: delimited block =
 #: upstream/_guides/mailer-reference.adoc:294
+#, fuzzy
 msgid "You need to switch on 2-Step Verification at https://myaccount.google.com/security in order to access the App passwords page."
-msgstr ""
+msgstr "アプリのパスワードページにアクセスするには、 https://myaccount.google.com/security 、2ステップ認証をオンにする必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/mailer-reference.adoc:297
