--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-container-image-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-container-image-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-09-08 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -234,4 +234,22 @@ msgid ""
 "--\n"
 "The name of the container image extension to use (e.g. docker, jib, s2i). The option will be used in case multiple extensions are present.\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-container-image-container-image-config.adoc:124
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.labels-labels]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.labels-labels[quarkus.container-image.labels]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Custom labels to add to the generated image.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-container-image-container-image-config.adoc:125
+#, no-wrap
+msgid "`Map<String,String>`"
 msgstr ""
