--- a/l10n/po/ja_JP/_versions/main/guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/command-mode-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-24 02:18+0000\n"
+"POT-Creation-Date: 2021-09-08 02:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -99,8 +99,8 @@ msgid ""
 "public class HelloWorldMain implements QuarkusApplication {\n"
 "  @Override\n"
 "  public int run(String... args) throws Exception {   // <.>\n"
-"    System.out.println(\"Hello World\");\n"
-"    return 10;\n"
+"    System.out.println(\"Hello \" + args[1]);\n"
+"    return 0;\n"
 " }\n"
 "}\n"
 msgstr ""
@@ -272,6 +272,97 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/command-mode-reference.adoc:131
 msgid "You can press the `Space bar` key and the application will be started again.  You can also use the `e` hotkey to edit the command line arguments and restart your application."
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/command-mode-reference.adoc:132
+#, fuzzy, no-wrap
+#| msgid "Writing Command Mode Applications"
+msgid "Testing Command Mode Applications"
+msgstr "コマンドモードアプリケーションの作成"
+
+#. type: Plain text
+#: upstream/_versions/main/guides/command-mode-reference.adoc:137
+msgid "Command Mode applications can be tested using the `@QuarkusMainTest` and `@QuarkusMainIntegrationTest` annotations. These work in a similar way to `@QuarkusTest` and `@QuarkusIntegrationTest` where `@QuarkusMainTest` will run the CLI tests within the current JVM, while `QuarkusIntegrationTest` is used to run the generated executable (both jars and native)."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/command-mode-reference.adoc:139
+msgid "We can write a simple test for our CLI application above as follows:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/command-mode-reference.adoc:148
+#, no-wrap
+msgid ""
+"import io.quarkus.test.junit.main.Launch;\n"
+"import io.quarkus.test.junit.main.LaunchResult;\n"
+"import io.quarkus.test.junit.main.QuarkusMainLauncher;\n"
+"import io.quarkus.test.junit.main.QuarkusMainTest;\n"
+"import org.junit.jupiter.api.Assertions;\n"
+"import org.junit.jupiter.api.Test;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/command-mode-reference.adoc:151
+#, no-wrap
+msgid ""
+"@QuarkusMainTest\n"
+"public class HelloTest {\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/command-mode-reference.adoc:157
+#, no-wrap
+msgid ""
+"    @Test\n"
+"    @Launch(\"World\")\n"
+"    public void testLaunchCommand(LaunchResult result) {\n"
+"        Assertions.assertEquals(\"Hello World\", result.getOutput());\n"
+"    }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/command-mode-reference.adoc:162
+#, no-wrap
+msgid ""
+"    @Test\n"
+"    @Launch(value = {}, exitCode = 1)\n"
+"    public void testLaunchCommandFailed() {\n"
+"    }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/command-mode-reference.adoc:170
+#, no-wrap
+msgid ""
+"    @Test\n"
+"    public void testManualLaunch(QuarkusMainLauncher launcher) {\n"
+"        LaunchResult result = launcher.launch(\"Everyone\");\n"
+"        Assertions.assertEquals(0, result.exitCode());\n"
+"        Assertions.assertEquals(\"Hello Everyone\", result.getOutput());\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/command-mode-reference.adoc:174
+msgid "We can then extend this with an integration test that can be used to test the native executable or runnable jar:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/command-mode-reference.adoc:178
+#, no-wrap
+msgid "import io.quarkus.test.junit.main.QuarkusMainIntegrationTest;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/command-mode-reference.adoc:182
+#, no-wrap
+msgid ""
+"@QuarkusMainIntegrationTest\n"
+"public class HelloIT extends HelloTest {\n"
+"}\n"
 msgstr ""
 
 #~ msgid "Dev mode"
