Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-05 02:16+0000\n"
+"POT-Creation-Date: 2021-09-09 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,7 +59,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
+"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
@@ -273,7 +273,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
+"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
