--- a/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-25 02:18+0000\n"
+"POT-Creation-Date: 2021-09-09 02:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -887,9 +887,9 @@ msgstr "MavenでビルドするためのサンプルDockerfileです。"
 msgid ""
 "## Stage 1 : build with maven builder image with native capabilities\n"
 "FROM quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor} AS build\n"
-"COPY pom.xml /code/\n"
-"COPY mvnw /code/mvnw\n"
-"COPY .mvn /code/.mvn\n"
+"COPY --chown=quarkus:quarkus mvnw /code/mvnw\n"
+"COPY --chown=quarkus:quarkus .mvn /code/.mvn\n"
+"COPY --chown=quarkus:quarkus pom.xml /code/\n"
 "USER quarkus\n"
 "WORKDIR /code\n"
 "RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline\n"
@@ -954,11 +954,11 @@ msgstr "GradleでビルドするためのサンプルDockerfileです。"
 msgid ""
 "## Stage 1 : build with maven builder image with native capabilities\n"
 "FROM quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor} AS build\n"
-"COPY gradlew /code/gradlew\n"
-"COPY gradle /code/gradle\n"
-"COPY build.gradle /code/\n"
-"COPY settings.gradle /code/\n"
-"COPY gradle.properties /code/\n"
+"COPY --chown=quarkus:quarkus gradlew /code/gradlew\n"
+"COPY --chown=quarkus:quarkus /code/gradle\n"
+"COPY --chown=quarkus:quarkus build.gradle /code/\n"
+"COPY --chown=quarkus:quarkus settings.gradle /code/\n"
+"COPY --chown=quarkus:quarkus gradle.properties /code/\n"
 "USER quarkus\n"
 "WORKDIR /code\n"
 "COPY src /code/src\n"
