--- a/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-03 02:25+0000\n"
+"POT-Creation-Date: 2021-09-09 02:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -816,7 +816,7 @@ msgstr ""
 msgid ""
 "@QuarkusTest\n"
 "class ServerMockTest {\n"
-"    @Inject\n"
+"    @InjectMock\n"
 "    Server server;\n"
 msgstr ""
 
